--- a/AA2023-2024/lesson4/example2/CMakeLists.txt
+++ b/AA2023-2024/lesson4/example2/CMakeLists.txt
@@ -7,7 +7,7 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release")
 endif()
 
-add_executable(block_multiplication block_multiplication.cpp)
+add_executable(block_multiplication block_multiplication.cpp ThreadPool1.cc ThreadUtils.cc )
 
 set_target_properties(block_multiplication PROPERTIES
     CXX_STANDARD 11
@@ -24,5 +24,5 @@ include_directories(
 if (MSVC)
     target_compile_options(block_multiplication PRIVATE /W4 /WX)
 else()
-    target_compile_options(block_multiplication PRIVATE -Wall -Wextra -pedantic -Werror)
+    target_compile_options(block_multiplication PRIVATE -Wall -Wextra -pedantic)
 endif()
