--- a/AA2023-2024/lesson4/example2/Makefile
+++ b/AA2023-2024/lesson4/example2/Makefile
@@ -129,6 +129,54 @@ block_multiplication/fast:
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/block_multiplication.dir/build.make CMakeFiles/block_multiplication.dir/build
 .PHONY : block_multiplication/fast
 
+ThreadPool1.o: ThreadPool1.cc.o
+.PHONY : ThreadPool1.o
+
+# target to build an object file
+ThreadPool1.cc.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/block_multiplication.dir/build.make CMakeFiles/block_multiplication.dir/ThreadPool1.cc.o
+.PHONY : ThreadPool1.cc.o
+
+ThreadPool1.i: ThreadPool1.cc.i
+.PHONY : ThreadPool1.i
+
+# target to preprocess a source file
+ThreadPool1.cc.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/block_multiplication.dir/build.make CMakeFiles/block_multiplication.dir/ThreadPool1.cc.i
+.PHONY : ThreadPool1.cc.i
+
+ThreadPool1.s: ThreadPool1.cc.s
+.PHONY : ThreadPool1.s
+
+# target to generate assembly for a file
+ThreadPool1.cc.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/block_multiplication.dir/build.make CMakeFiles/block_multiplication.dir/ThreadPool1.cc.s
+.PHONY : ThreadPool1.cc.s
+
+ThreadUtils.o: ThreadUtils.cc.o
+.PHONY : ThreadUtils.o
+
+# target to build an object file
+ThreadUtils.cc.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/block_multiplication.dir/build.make CMakeFiles/block_multiplication.dir/ThreadUtils.cc.o
+.PHONY : ThreadUtils.cc.o
+
+ThreadUtils.i: ThreadUtils.cc.i
+.PHONY : ThreadUtils.i
+
+# target to preprocess a source file
+ThreadUtils.cc.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/block_multiplication.dir/build.make CMakeFiles/block_multiplication.dir/ThreadUtils.cc.i
+.PHONY : ThreadUtils.cc.i
+
+ThreadUtils.s: ThreadUtils.cc.s
+.PHONY : ThreadUtils.s
+
+# target to generate assembly for a file
+ThreadUtils.cc.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/block_multiplication.dir/build.make CMakeFiles/block_multiplication.dir/ThreadUtils.cc.s
+.PHONY : ThreadUtils.cc.s
+
 block_multiplication.o: block_multiplication.cpp.o
 .PHONY : block_multiplication.o
 
@@ -162,6 +210,12 @@ help:
 	@echo "... edit_cache"
 	@echo "... rebuild_cache"
 	@echo "... block_multiplication"
+	@echo "... ThreadPool1.o"
+	@echo "... ThreadPool1.i"
+	@echo "... ThreadPool1.s"
+	@echo "... ThreadUtils.o"
+	@echo "... ThreadUtils.i"
+	@echo "... ThreadUtils.s"
 	@echo "... block_multiplication.o"
 	@echo "... block_multiplication.i"
 	@echo "... block_multiplication.s"
